--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7+9SjLFXj6doared8lyQI",
+      "authorship_tag": "ABX9TyOaR4bglJKf8Ddno92NYR3L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1403,7 +1403,7 @@
         "\"3: Display all pokemons whose 'hp' is greater than the average hp value computed from all pokemons with the same 'type1'. Sort the result by 'type1' (ascendingly) then by 'hp' (descendingly).\"\n",
         "pkm = pkm_data.copy()\n",
         "pkm['hp_mean'] = pkm.groupby('type1')['hp'].transform('mean')\n",
-        "display(pkm[pkm['hp'] > pkm['hp_mean']].sort_values('type1', ascending = True)[['name','pokedex_number','type1','hp','attack','defense']].set_index('name'))"
+        "display(pkm[pkm['hp'] > pkm['hp_mean']].sort_values(['type1','hp'], ascending = [True,False])[['name','pokedex_number','type1','hp','attack','defense']].set_index('name'))"
       ],
       "metadata": {
         "colab": {
@@ -1411,9 +1411,9 @@
           "height": 455
         },
         "id": "YjAHVfMr18IV",
-        "outputId": "6860b906-a89d-4c62-a955-f0d4d48fd859"
+        "outputId": "8c905fa7-d93c-4287-8d3a-215640e8e816"
       },
-      "execution_count": 104,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1421,23 +1421,23 @@
             "text/plain": [
               "            pokedex_number  type1   hp  attack  defense\n",
               "name                                                   \n",
-              "Yanma                  193    bug   65      65       45\n",
-              "Escavalier             589    bug   70     135      105\n",
-              "Scyther                123    bug   70     110       80\n",
-              "Pinsir                 127    bug   65     155      120\n",
-              "Galvantula             596    bug   70      77       60\n",
+              "Buzzwole               794    bug  107     139      139\n",
+              "Yanmega                469    bug   86      76       86\n",
+              "Volcarona              637    bug   85      60       65\n",
+              "Heracross              214    bug   80     185      115\n",
+              "Accelgor               617    bug   80      70       40\n",
               "...                    ...    ...  ...     ...      ...\n",
-              "Lanturn                171  water  125      58       58\n",
-              "Chinchou               170  water   75      38       38\n",
-              "Feraligatr             160  water   85     105      100\n",
-              "Floatzel               419  water   85     105       55\n",
               "Palpitoad              536  water   75      65       55\n",
+              "Swanna                 581  water   75      87       63\n",
+              "Carracosta             565  water   74     108      133\n",
+              "Greninja               658  water   72     145       67\n",
+              "Clawitzer              693  water   71      73       88\n",
               "\n",
               "[362 rows x 5 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-738c66c7-b003-4647-bbfe-4f57799519f4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5e962aaa-94e0-4442-ae12-76a327e34901\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1473,44 +1473,44 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>Yanma</th>\n",
-              "      <td>193</td>\n",
+              "      <th>Buzzwole</th>\n",
+              "      <td>794</td>\n",
               "      <td>bug</td>\n",
-              "      <td>65</td>\n",
-              "      <td>65</td>\n",
-              "      <td>45</td>\n",
+              "      <td>107</td>\n",
+              "      <td>139</td>\n",
+              "      <td>139</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Escavalier</th>\n",
-              "      <td>589</td>\n",
+              "      <th>Yanmega</th>\n",
+              "      <td>469</td>\n",
               "      <td>bug</td>\n",
-              "      <td>70</td>\n",
-              "      <td>135</td>\n",
-              "      <td>105</td>\n",
+              "      <td>86</td>\n",
+              "      <td>76</td>\n",
+              "      <td>86</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Scyther</th>\n",
-              "      <td>123</td>\n",
+              "      <th>Volcarona</th>\n",
+              "      <td>637</td>\n",
               "      <td>bug</td>\n",
-              "      <td>70</td>\n",
-              "      <td>110</td>\n",
-              "      <td>80</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Pinsir</th>\n",
-              "      <td>127</td>\n",
-              "      <td>bug</td>\n",
-              "      <td>65</td>\n",
-              "      <td>155</td>\n",
-              "      <td>120</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Galvantula</th>\n",
-              "      <td>596</td>\n",
-              "      <td>bug</td>\n",
-              "      <td>70</td>\n",
-              "      <td>77</td>\n",
+              "      <td>85</td>\n",
               "      <td>60</td>\n",
+              "      <td>65</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Heracross</th>\n",
+              "      <td>214</td>\n",
+              "      <td>bug</td>\n",
+              "      <td>80</td>\n",
+              "      <td>185</td>\n",
+              "      <td>115</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Accelgor</th>\n",
+              "      <td>617</td>\n",
+              "      <td>bug</td>\n",
+              "      <td>80</td>\n",
+              "      <td>70</td>\n",
+              "      <td>40</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -1521,44 +1521,44 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Lanturn</th>\n",
-              "      <td>171</td>\n",
-              "      <td>water</td>\n",
-              "      <td>125</td>\n",
-              "      <td>58</td>\n",
-              "      <td>58</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Chinchou</th>\n",
-              "      <td>170</td>\n",
-              "      <td>water</td>\n",
-              "      <td>75</td>\n",
-              "      <td>38</td>\n",
-              "      <td>38</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Feraligatr</th>\n",
-              "      <td>160</td>\n",
-              "      <td>water</td>\n",
-              "      <td>85</td>\n",
-              "      <td>105</td>\n",
-              "      <td>100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Floatzel</th>\n",
-              "      <td>419</td>\n",
-              "      <td>water</td>\n",
-              "      <td>85</td>\n",
-              "      <td>105</td>\n",
-              "      <td>55</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>Palpitoad</th>\n",
               "      <td>536</td>\n",
               "      <td>water</td>\n",
               "      <td>75</td>\n",
               "      <td>65</td>\n",
               "      <td>55</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Swanna</th>\n",
+              "      <td>581</td>\n",
+              "      <td>water</td>\n",
+              "      <td>75</td>\n",
+              "      <td>87</td>\n",
+              "      <td>63</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Carracosta</th>\n",
+              "      <td>565</td>\n",
+              "      <td>water</td>\n",
+              "      <td>74</td>\n",
+              "      <td>108</td>\n",
+              "      <td>133</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Greninja</th>\n",
+              "      <td>658</td>\n",
+              "      <td>water</td>\n",
+              "      <td>72</td>\n",
+              "      <td>145</td>\n",
+              "      <td>67</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Clawitzer</th>\n",
+              "      <td>693</td>\n",
+              "      <td>water</td>\n",
+              "      <td>71</td>\n",
+              "      <td>73</td>\n",
+              "      <td>88</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1567,7 +1567,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-738c66c7-b003-4647-bbfe-4f57799519f4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5e962aaa-94e0-4442-ae12-76a327e34901')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1619,12 +1619,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-738c66c7-b003-4647-bbfe-4f57799519f4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5e962aaa-94e0-4442-ae12-76a327e34901 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-738c66c7-b003-4647-bbfe-4f57799519f4');\n",
+              "        const element = document.querySelector('#df-5e962aaa-94e0-4442-ae12-76a327e34901');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1644,8 +1644,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7da34b26-8f1c-46a2-b59e-19a708668417\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7da34b26-8f1c-46a2-b59e-19a708668417')\"\n",
+              "<div id=\"df-5092da0a-ada2-485f-818b-582a0ae34cb9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5092da0a-ada2-485f-818b-582a0ae34cb9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1764,7 +1764,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7da34b26-8f1c-46a2-b59e-19a708668417 button');\n",
+              "        document.querySelector('#df-5092da0a-ada2-485f-818b-582a0ae34cb9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1776,12 +1776,21 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"display(pkm[pkm['hp'] > pkm['hp_mean']]\",\n  \"rows\": 362,\n  \"fields\": [\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 362,\n        \"samples\": [\n          \"Lurantis\",\n          \"Leavanny\",\n          \"Volcarona\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pokedex_number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 227,\n        \"min\": 3,\n        \"max\": 801,\n        \"num_unique_values\": 362,\n        \"samples\": [\n          754,\n          542,\n          637\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"type1\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 18,\n        \"samples\": [\n          \"bug\",\n          \"dark\",\n          \"ghost\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"hp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 24,\n        \"min\": 57,\n        \"max\": 255,\n        \"num_unique_values\": 68,\n        \"samples\": [\n          66,\n          110,\n          57\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"attack\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 30,\n        \"min\": 5,\n        \"max\": 185,\n        \"num_unique_values\": 92,\n        \"samples\": [\n          89,\n          109,\n          93\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"defense\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 29,\n        \"min\": 5,\n        \"max\": 230,\n        \"num_unique_values\": 86,\n        \"samples\": [\n          119,\n          45,\n          107\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"display(pkm[pkm['hp'] > pkm['hp_mean']]\",\n  \"rows\": 362,\n  \"fields\": [\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 362,\n        \"samples\": [\n          \"Nuzleaf\",\n          \"Dustox\",\n          \"Ariados\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pokedex_number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 227,\n        \"min\": 3,\n        \"max\": 801,\n        \"num_unique_values\": 362,\n        \"samples\": [\n          274,\n          269,\n          168\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"type1\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 18,\n        \"samples\": [\n          \"bug\",\n          \"dark\",\n          \"ghost\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"hp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 24,\n        \"min\": 57,\n        \"max\": 255,\n        \"num_unique_values\": 68,\n        \"samples\": [\n          88,\n          100,\n          77\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"attack\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 30,\n        \"min\": 5,\n        \"max\": 185,\n        \"num_unique_values\": 92,\n        \"samples\": [\n          89,\n          47,\n          104\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"defense\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 29,\n        \"min\": 5,\n        \"max\": 230,\n        \"num_unique_values\": 86,\n        \"samples\": [\n          200,\n          139,\n          101\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XQmR955s9wHk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
